# TitanMAC-Standalone

./: .gitignore  CLAUDE.md  README (copy 1).md  README.md  pyproject.toml  train_titanmac_nested.py  vlt.toml
benchmarks/: bench_block_ell.py
docs/: ADVANCED_OPTIMIZATION_RESEARCH.md  Advanced-Tokenizer.md  CONTINUUM_OPTIMIZER_META_LOSS_FIX.md  GPU_PROFILING_REPORT.md  OPTIMIZER_QUICK_REFERENCE.md  PAPER_FAITHFUL_REFACTOR.md  PERFORMANCE_OPTIMIZATIONS.md  PROFILING_REPORT_TITANMAC_NESTED.md  REMAINING_PERFORMANCE_GAINS.md  TRITON_KERNEL_IMPLEMENTATION_PLAN.md  TRITON_MEMORY_KERNEL_DESIGN.md  block_sparse_quickstart.md  cms_block_sparse_spec.md  nested_optimizer_improvements.md
docs/nested-learning/: NestedOptimizer-Port-Guide.md
examples/: ab_test_optimizers.py  train_block_sparse.py  train_math.py  train_math_v2.py  train_titanmac_nested.py
experiments/: __init__.py
experiments/cms_block_sparse/: BASELINE_RESULTS.md  __init__.py  run_baselines.py  run_forgetting.py
results/ab_tests/: base_continuum_phase2_metrics.json  base_deep_nested_phase1_metrics.json
specs/001-cms-block-sparse/: benchmarks.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/integration/: __init__.py  test_cms_topology_integration.py  test_ddp_topology_sync.py
tests/unit/: test_block_ell_format.py  test_block_ell_kernels.py  test_cms_block_linear.py  test_config.py  test_deep_nested_optimizer.py  test_topology_scorer.py
titans_core/: __init__.py  config.py
titans_core/attn/: __init__.py  block_sparse_attention.py  windowed_attention.py
titans_core/blocks/: __init__.py  mlp.py  norms.py  titan_block.py
titans_core/kernels/: __init__.py  block_ell_backward.py  block_ell_forward.py  memory_mlp.py
titans_core/layers/: __init__.py  block_ell.py  block_sparse.py
(+26 files in other folders)
