[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titans-core"
version = "0.2.0"
description = "TitanMAC: Memory-Augmented Transformer with Neural Long-Term Memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
keywords = [
    "deep-learning",
    "transformers",
    "memory-augmented",
    "attention",
    "titans",
    "neural-memory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
train = [
    "wandb>=0.16.0",
    "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/titans-core"
Documentation = "https://github.com/yourusername/titans-core#readme"
Issues = "https://github.com/yourusername/titans-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["titans_core*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
